--- a/app/src/main/res/layout/activity_product_add.xml
+++ b/app/src/main/res/layout/activity_product_add.xml
@@ -6,6 +6,14 @@
     android:orientation="vertical"
     android:background="@color/colorWhite">
 
+    <ImageButton
+        android:id="@+id/btnEdit"
+        android:layout_width="57dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="320dp"
+        android:src="@drawable/edit"
+        android:visibility="invisible"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
